--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Genereates receipts based on a user's spotify listening history.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Michelle Liu",
   "license": "ISC",
